# ComputerVisionResources

./: README.md
AugmentedReality/Google_ARCore_ex-ProjectTango/: Online interactive 3D - Virtual and Augmented Reality Company | Elementals Web Unity 3D.webloc
AugmentedReality/SourceCode/AugmentedReality/13thLab/Nov12/: README
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/: CMakeLists.txt  Panoptik.cpp  Panoptik.h  PanoptikCal.cpp  PanoptikCal.h  PanoptikShow.cpp  PanoptikShow.h  test_main.cpp
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/Modules/: FindOpenNI.cmake  LibFindMacros.cmake
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/Processing/: Calibrator.cpp  Calibrator.h  Motor.cpp  Motor.h
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/Readers/: DepthReader.cpp  DepthReader.h  FileReader.cpp  FileReader.h  IRReader.cpp  IRReader.h  ImageReader.cpp  ImageReader.h  OpenNI.h  OpenNIReader.cpp  OpenNIReader.h  OpenNIReaderThread.cpp  OpenNIReaderThread.h
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/Render/: FileWriter.cpp  FileWriter.h  IRViewer.cpp  IRViewer.h  ImageViewer.cpp  ImageViewer.h  MeshBuilder.cpp  MeshBuilder.h
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/UI/: CaptureUI.h  ControlUI.cpp  ControlUI.h  ControlUI.wxg  ImageDisplayFrame.cpp  ImageDisplayFrame.h  ImageWindow.cpp  ImageWindow.h  OSGCanvas.cpp  OSGCanvas.h  ReconstructionFrame.cpp  ReconstructionFrame.h  WXGraphicsWindow.cpp  WXGraphicsWindow.h  main.cpp
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/osgswig/: osg.pth
BodyShapeRecognitionForOnlineFashion/DepthSensors/JoeKilner_Surrey/panoptik/panoptik-7c7dc1bb130a/osgswig/osgswig-3.0.1/: osg.py  osgAnimation.py  osgDB.py  osgFX.py  osgGA.py  osgManipulator.py  osgShadow.py  osgSim.py  osgText.py  osgUtil.py  osgViewer.py
FourierTransform/:  Fourier Image Filtering.webloc
LightFieldImaging/: Workshop on Light Field Imaging.webloc
MachineLearning/DeepLearning/: Machine Learning  |  Google Developers.webloc  _Get Started with Deep Learning | NVIDIA Developer.webloc  _Self-Study Courses for Deep Learning | NVIDIA Developer.webloc
misc_resources/web/: CS 598 Applications of Computer Vision.webloc  CVonline - Compendium of Computer Vision.webloc  Illustrated Dictionary of Computer Vision and Image Processing.webloc  Keith Price Bibliography Annotated Computer Vision Bibliography- Table of Contents.webloc  Making computer vision computationally efficient | EECS at UC Berkeley.webloc  Multiple View Geometry in Computer Vision<BR>Second Edition.webloc  Surround360-surround360_render at master · facebook-Surround360.webloc  The Computer Vision Homepage.webloc  Tutorials on topics in 2D image analysis, computer vision.webloc  openMVG-awesome_3DReconstruction_list- A curated list of papers & ressources linked to 3D reconstruc….webloc  openMVG-openMVG- open Multiple View Geometry library. Basis for 3D computer vision and Structure fro….webloc
(+58 files in other folders)
